Finish off edits from yesterday. Fix mobile menu. Since I was on the remote desktop via my phone this morning. I was fixing some of the mobile styles. I had fixed up a few things on the account pages. And had started to do a little work on fixing up the header. I just finished up fixing the menu, and adding a (pretty standard looking) mobile menu button, for more options. I am not going to spend any more time on this now, but it is kind of nice to see that in there, and will be something we want to attend to before too long. Now, I believe there are still just a few little account pages that need a little styling. The I think i will begin looking at the todos and try to get some of those off my list. I am kind of tentatively planning on looking into the footer newsletter thing. But I would like to wrap up the account pages first, so that's my game plan. Added this message to README.
Former-commit-id: 6bb02aa34d20e0a827fd6f0a488e7d674eb64498

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -1037,7 +1037,15 @@ img, button, input {
 
     .account-box.no-border {
         padding: 10px 0 !important;
+        max-width: 90%;
     }
+
+	@media only screen and (max-width: 767px) {
+		.account-box.no-border {
+        	clear: both;
+        	margin: 10px 5% !important;
+		}
+	}
 
     .account-box.no-border .account-box-inner {
         margin: 0 10px !important;
@@ -1222,6 +1230,22 @@ img, button, input {
             margin: 5px;
             background: #FFF;
         }
+
+		@media only screen and (max-width: 767px) {
+			#my-orders-table {
+				width: 90% !important;
+				margin: 10px 5% !important;
+			}
+			#my-orders-table tr td,
+			#my-orders-table tr th {
+			    display: none;
+			}
+			table th.show-mobile,
+			table td.show-mobile {
+			    display: table-cell !important;
+			    width: 50% !important;
+			}
+		}
 
         #my-orders-table tr th {
             font-weight: bold;
